# inverse_rg_testing

./: .gitignore  AGENTS.md  CLAUDE.md  IDEAS.md  README.md  SPEC.md  TODO.md  pyproject.toml
.claude/: settings.json
diffusion/: README.md  __init__.py  utils.py
diffusion/configs/: default.yaml  demo.yaml  demo_v3.yaml  demo_v4.yaml  demo_v6.yaml  smoke.yaml
diffusion/lgt/: actions.py  blocking.py  exact.py  hmc.py  lattice.py  local_updates.py
diffusion/model/: sampler.py  schedule.py  score_net.py  train.py
diffusion/pipeline/: __init__.py  ladder.py
diffusion/scripts/: 00_toy_wrapped_diffusion.py  01_generate_data.py  02_train.py  03_run_ladder.py  04_validate.py  05_hmc_thermalization.py  06_generalization_study.py  07_scaling_figures.py  08_plaquette_traces.py  09_observable_traces.py  10_beta_matching_study.py  11_autocorrelation.py  12_campaign_verdict.py
diffusion/tests/: test_diffusion_lattice_core.py  test_diffusion_model.py  test_validate_stats.py
diffusion/validate/: __init__.py  observables.py  report.py  stats.py
examples/: distribution_diagnostics.py  fixed_coarse_baseline.py  train_learned_rg.py
inverserg/: __init__.py  actions.py  baselines.py  blocking.py  diagnostics.py  forward_rg.py  hmc.py  inverse.py  lattice.py  measurements.py  monotone.py  training.py
presentation/: phase0-naive-pipeline.ipynb  phase1-learned-blocking-beta4.ipynb  phase1-learned-blocking-beta6.ipynb  phase2-rg-monotone.ipynb  phase3-inverse-rg.ipynb
tests/: test_blocking_phase1.py  test_forward_inverse_rg.py  test_lattice_measurements.py  test_monotone.py
(+20 files in other folders)
