[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "inverserg"
version = "0.1.0"
description = "Inverse renormalization-group experiments for 2D U(1) lattice gauge theory."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["matplotlib>=3.8", "numpy>=1.24", "scipy>=1.11", "torch>=2.2"]

[tool.setuptools.packages.find]
include = ["inverserg*"]
